<resources>
    <string name="app_name">Litrail</string>

    <string name="facebook_app_id">255621245183507</string>
    <string name="fb_login_protocol_scheme">fb255621245183507</string>

    <string name="title_home">Tvarkaraštis</string>
    <string name="title_dashboard">Žymės</string>
    <string name="title_notifications">Pranešimai</string>
    <string name="title_map">Žemėlapis</string>
    <string name="action_settings">Nustatymai</string>
    <string name="action_report">Pranešti apie klaidą</string>
    <string name="departure_date">Pasirinkite išvykimo datą</string>
    <string name="departure_place">Išvykimo vieta</string>
    <string name="undefined_place">Nepasirinkta vieta</string>
    <string name="test_place">Vietelė123</string>
    <string name="destination">Atvykimo vieta</string>
    <string name="search">Ieškoti</string>
    <string name="title_activity_settings">Nustatymai</string>
    <string name="select_departure_station">Pasirinkite išvykimo stotį</string>
    <string name="select_arrival_station">Pasirinkite atvykimo stotį</string>
    <string name="about_us">Apie mus</string>
    <string name="title_activity_maps">Stotys</string>

    <string name="timetableSearchTAG">timetableSearchFragment</string>
    <string name="date">Data</string>
    <string name="departureTime">Išvykimo laikas</string>
    <string name="undefined_time">Nežinomas laikas</string>
    <string name="arrivalTime">Atvykimo laikas</string>
    <string name="duration">Trukmė</string>
    <string name="testTime">00:00</string>
    <string name="message_title_sample">Pranešimo pavadinimas</string>
    <string name="content_sample">Lorem ipsum dolor sit amet, mea ei veri saepe nostrud, sit ad modus diceret, id duo diceret hendrerit. Ei sea possit atomorum. Apeirian posidonium sit id, mea eripuit imperdiet eloquentiam at, eum dicat epicurei ne. Sit in eius oporteat erroribus, vis phaedrum reformidans et. Pro ut ludus soluta tincidunt, audiam repudiandae te mel.</string>
    <string name="speech_prompt">Noriu nuvykti iš … į …</string>
    <string name="speech_not_supported">Deja, tavo įrenginys šios funkcijos nepalaiko :(</string>
    <string name="sample_date">2017-10-12</string>
    <string name="published">Publikuota:</string>
    <string name="dialog_cancel">Atšaukti</string>
    <string name="action_open_timetable">open_timetable</string>
    <string name="key_departure_station">departure_station</string>
    <string name="key_arrival_station">arrival_station</string>
    <string name="title_fragment_map">Stotys ir maršrutai</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_facebook_sign_in">Login with facebook</string>
</resources>