<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="2dp"
        app:cardCornerRadius="4dp">

        <!--<FrameLayout-->
            <!--android:layout_width="5dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#546E7A"-->
            <!--android:visibility="visible">-->

        <!--</FrameLayout>-->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"

            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/messageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/message_title_sample"
                android:textAppearance="@android:style/TextAppearance.Material.WindowTitle"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/departureLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@string/content_sample"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageTitle" />

            <TextView
                android:id="@+id/messageDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/sample_date"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
                android:textSize="12sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/departureLabel"
                android:layout_marginEnd="5dp" />

            <TextView
                android:id="@+id/messageDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/published"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/messageDate"
                app:layout_constraintRight_toLeftOf="@+id/messageDate"
                app:layout_constraintTop_toTopOf="@+id/messageDate"
                android:layout_marginEnd="5dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteX="194dp"
                tools:layout_editor_absoluteY="30dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
