<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="2dp"
        android:orientation="vertical"
        app:cardCornerRadius="4dp">

        <!--<FrameLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:visibility="visible">-->

        <!--</FrameLayout>-->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="15dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.375"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="0dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/avgBallSpeedLabel"
                android:layout_width="78dp"
                android:layout_height="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@string/duration"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintLeft_toLeftOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testTime"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                android:textSize="42sp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/avgBallSpeedLabel" />


            <TextView
                android:id="@+id/departureLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@string/departureTime"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/guideline" />

            <TextView
                android:id="@+id/departureTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/testTime"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                android:textSize="32sp"
                app:layout_constraintLeft_toLeftOf="@+id/departureLabel"
                app:layout_constraintTop_toBottomOf="@+id/departureLabel" />

            <TextView
                android:id="@+id/arrivalTimeLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@string/arrivalTime"
                android:textAlignment="textEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintBottom_toBottomOf="@+id/departureLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.100000024"
                app:layout_constraintLeft_toRightOf="@+id/departureLabel"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/arrivalTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="-1dp"
                android:text="@string/testTime"
                android:textAlignment="textEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                android:textSize="32sp"
                app:layout_constraintLeft_toLeftOf="@+id/arrivalTimeLabel"
                app:layout_constraintTop_toBottomOf="@+id/arrivalTimeLabel" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
