<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/routeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:elevation="2dp"
        app:cardCornerRadius="2dp">

        <!--<FrameLayout-->
            <!--android:layout_width="5dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#37474F"-->
            <!--android:visibility="visible">-->
        <!--</FrameLayout>-->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="0dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/departureDateLabel"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@string/date"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintLeft_toLeftOf="@+id/departureDate"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/departureDate"
                android:layout_width="109dp"
                android:layout_height="28dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:text="2017-10-11"
                android:textAppearance="@android:style/TextAppearance.Material.WindowTitle"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/departureDateLabel"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="13dp" />

            <TextView
                android:id="@+id/departureLocationLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@string/departure_place"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/departureLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/test_place"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/departureLocationLabel" />

            <TextView
                android:id="@+id/arrivalLocationLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:text="@string/destination"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintLeft_toLeftOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/arrivalLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/test_place"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                app:layout_constraintLeft_toLeftOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/arrivalLocationLabel" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/listTime"
        android:name="starsoft.litrail_android.Fragments.RouteDataFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="starsoft.lgt.RouteDataFragment"
        tools:listitem="@layout/fragment_route_time" />
</LinearLayout>